src/objects/MetroclientProduct__c.object
<CustomObject>
    <description>Metroclient Product Catalog - Metrostudy Products</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Report-HIP</fullName>
                </value>
                <value>
                    <fullName>Report-MS</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Coverage</label>
        <referenceTo>MetroclientCoverage__c</referenceTo>
        <relationshipName>MetroclientProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DescriptionInternal__c</fullName>
        <inlineHelpText>Internal description of product not seen by customers</inlineHelpText>
        <label>Description (Internal)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LowestGeographyType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lowest geography type (level) available for the product.</description>
        <inlineHelpText>The lowest geography type (level) available for the product.</inlineHelpText>
        <label>Lowest Geography Type</label>
        <referenceTo>MetroclientGeographyType__c</referenceTo>
        <relationshipName>Metroclient_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductAbbreviation__c</fullName>
        <label>Product Abbreviation</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProductClass__c</fullName>
        <description>Used by Portal</description>
        <inlineHelpText>Used by Metrostudy Portal to determine user content based on product class.</inlineHelpText>
        <label>Product Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Permits</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>RRI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>This is the product code used to other websites, such as the Portal and Analytics.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the product code used to other websites, such as the Portal and Analytics.</inlineHelpText>
        <label>Product Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProvisionFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is not in use at this time</description>
        <inlineHelpText>This field is not in use at this time</inlineHelpText>
        <label>Provision?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriptionOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box when product can only be delivered as a subscription and a One-Time sale should still be provisioned as a subscription.</description>
        <inlineHelpText>Product is delivered as a subscription and a One-Time sale must be provisioned as a subscription.  When this box is unchecked, a One-Time sale of the product is not provisioned.</inlineHelpText>
        <label>Subscription Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WordPressTag__c</fullName>
        <inlineHelpText>Product Name that will match the tag used in WordPress to tag content to products.  This value should not be changed without also updating the tag in WordPress.  The name of the product will be used when this field is blank.</inlineHelpText>
        <label>WordPress Tag</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZuoraSku__c</fullName>
        <description>The product sku in Zuora.  Crucial for tiered pricing to work correctly.</description>
        <externalId>true</externalId>
        <inlineHelpText>The product sku in Zuora.  This links the SFDC product to the matching Zuora product.</inlineHelpText>
        <label>Zuora Sku</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Metrostudy Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>ZuoraSku__c</columns>
        <columns>ProductCode__c</columns>
        <columns>ProductClass__c</columns>
        <columns>SubscriptionOnly__c</columns>
        <columns>Coverage__c</columns>
        <columns>LowestGeographyType__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Analytics</fullName>
        <columns>NAME</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>ProductCode__c</columns>
        <columns>ZuoraSku__c</columns>
        <columns>Coverage__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>cube,analytiic</value>
        </filters>
        <label>Analytics</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Membership</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>DescriptionInternal__c</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>ZuoraSku__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductClass__c</field>
            <operation>equals</operation>
            <value>Membership</value>
        </filters>
        <label>Product Class = Membership</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Packages</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>ZuoraSku__c</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>DescriptionInternal__c</columns>
        <columns>SubscriptionOnly__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>package,pkg,membership</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Package</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>notEqual</operation>
            <value>Application,Analytics,Report-HIP,Report-MS,Other</value>
        </filters>
        <label>Packages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Permits</fullName>
        <columns>NAME</columns>
        <columns>ZuoraSku__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Coverage__c</columns>
        <columns>LowestGeographyType__c</columns>
        <columns>DescriptionInternal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>permit</value>
        </filters>
        <label>Permits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ReportsHIP</fullName>
        <booleanFilter>1 OR ( 2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Coverage__c</columns>
        <columns>LowestGeographyType__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Category__c</columns>
        <columns>DescriptionInternal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Report-HIP</value>
        </filters>
        <filters>
            <field>ProductCode__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>notEqual</operation>
            <value>Application,Analytics,Report-MS,Package,Other</value>
        </filters>
        <label>Reports - HIP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ReportsNational</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Coverage__c</columns>
        <columns>LowestGeographyType__c</columns>
        <columns>ProductCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductCode__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>video,Analytics,xy,Metrosearch</value>
        </filters>
        <filters>
            <field>LowestGeographyType__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>National,Natl</value>
        </filters>
        <label>Reports - National</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Residential_Remodeling</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>DescriptionInternal__c</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>ZuoraSku__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductClass__c</field>
            <operation>equals</operation>
            <value>RRI</value>
        </filters>
        <label>Product Class = RRI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Residential_Remodeling2</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>DescriptionInternal__c</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>ZuoraSku__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductClass__c</field>
            <operation>equals</operation>
            <value>RRI</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Roofing,Windows,Doors,Siding</value>
        </filters>
        <label>Product Class = RRI, Roofing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>DescriptionInternal__c</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>ZuoraSku__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ZuoraSku__c</field>
            <operation>equals</operation>
            <value>SKU-00000158</value>
        </filters>
        <label>Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>View_MortgagePro</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>ProductAbbreviation__c</columns>
        <columns>LowestGeographyType__c</columns>
        <columns>Coverage__c</columns>
        <columns>Category__c</columns>
        <columns>ProvisionFlag__c</columns>
        <columns>WordPressTag__c</columns>
        <columns>ProductClass__c</columns>
        <columns>SubscriptionOnly__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Mortgage</value>
        </filters>
        <label>MortgagePro</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>